src/objects/StockChangeHisotry__c.object
<CustomObject>
    <fields>
        <fullName>AgtRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AGT</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>取引先種別は「旅行会社」のみの取引先を設定できる</errorMessage>
            <filterItems>
                <field>Account.AccountType__c</field>
                <operation>equals</operation>
                <value>旅行会社</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>在庫変更履歴</relationshipLabel>
        <relationshipName>StockAccountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BatchRunTarget__c</fullName>
        <inlineHelpText>該当項目値を設定すると、該当名と一致のバッチのみ、該当在庫調整情報を連携する</inlineHelpText>
        <label>実行バッチ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>TL</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>JR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CooperationResultJrRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>連携結果(JR)</label>
        <referenceTo>CooperationResult__c</referenceTo>
        <relationshipLabel>在庫変更履歴 (連携結果(JR))</relationshipLabel>
        <relationshipName>StockCooperationResultJrRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CooperationResultRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>連携結果(TL)</label>
        <referenceTo>CooperationResult__c</referenceTo>
        <relationshipLabel>在庫変更履歴</relationshipLabel>
        <relationshipName>StockCooperationResultRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CooperationResultTaRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>連携結果(TA)</label>
        <referenceTo>CooperationResult__c</referenceTo>
        <relationshipLabel>在庫変更履歴 (連携結果(TA))</relationshipLabel>
        <relationshipName>StockCooperationResultTaRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CooperationResultTrRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>連携結果(TR)</label>
        <referenceTo>CooperationResult__c</referenceTo>
        <relationshipLabel>在庫変更履歴 (連携結果(TR))</relationshipLabel>
        <relationshipName>StockCooperationResultTrRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreateSource__c</fullName>
        <label>作成元</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>TL</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>JR</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JrProcessLog__c</fullName>
        <label>JR処理ログ</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JrStatusLst__c</fullName>
        <label>JR連携ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>未連携</fullName>
                    <default>true</default>
                    <label>未連携</label>
                </value>
                <value>
                    <fullName>連携NG</fullName>
                </value>
                <value>
                    <fullName>連携不要</fullName>
                </value>
                <value>
                    <fullName>連携済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>在庫変更履歴</relationshipLabel>
        <relationshipName>StockLeadRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessLog__c</fullName>
        <label>TL処理ログ</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provisional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>仮データ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesStatus_del__c</fullName>
        <label>販売状態</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettingFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>個別設定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusLst__c</fullName>
        <label>TL連携ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未連携</fullName>
                    <default>true</default>
                    <label>未連携</label>
                </value>
                <value>
                    <fullName>連携NG</fullName>
                </value>
                <value>
                    <fullName>連携不要</fullName>
                </value>
                <value>
                    <fullName>連携済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockChangeCnt__c</fullName>
        <label>在庫変更数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StockChangeDateKey__c</fullName>
        <description>調整日付の検索キー</description>
        <externalId>true</externalId>
        <label>調整日付キー</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockChangeDate__c</fullName>
        <label>調整日付</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SyncRquestNo__c</fullName>
        <inlineHelpText>らく通連携の際に、リクエストID情報を記録する</inlineHelpText>
        <label>リクエストID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaProcessLog__c</fullName>
        <label>TA処理ログ</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaStatusLst__c</fullName>
        <label>TA連携ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未連携</fullName>
                    <default>true</default>
                    <label>未連携</label>
                </value>
                <value>
                    <fullName>連携NG</fullName>
                </value>
                <value>
                    <fullName>連携不要</fullName>
                </value>
                <value>
                    <fullName>連携済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfRoomRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>在庫変更履歴</relationshipLabel>
        <relationshipName>StockTypeOfRoomRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>在庫変更履歴</label>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>在庫変更履歴No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>